Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-484

Using CTRL+A and CTRL+C on large files in the BINEditor will crash Qt creator

XMLWordPrintable

    • bec01778d9e7450a88fbcfe2766df280610c33c4

      Open Qt Creator, click Edit Pane, File -> open file, e.g. qt-sdk-win-commercial-2009.05.exe, CTRL+A, CTRL+C in the binary editor
      -> Qt creator crash.

      This problem might be related to the large file size because this isn't happening on smaller binary files.

        1. stacktrace.txt
          3 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rlohning Robert Löhning
            mietht Tobias Mieth
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes