Fixed crash when trying to copy large binary file

Reviewed-by: Oswald Buddenhagen
Task-number: QTCREATORBUG-484